--- a/src/components/Row.css
+++ b/src/components/Row.css
@@ -1,11 +1,42 @@
-.row_posters {
-  display: inline-flex;
+body {
+  background-color: black;
 }
 
-.row_poster {
+.row {
+  color: white;
+  text-align: left;
+}
+.row__posters {
+  display: inline-flex;
+  overflow-y: hidden;
+  overflow-x: visible;
+  padding: 20px;
+}
+
+.row__posters::-webkit-scrollbar {
+  display: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
+.row__poster {
   object-fit: contain;
   width: 100%;
   max-height: 100px;
   margin-right: 10px;
   transition: transform 450ms;
+}
+
+.row__poster:hover {
+  transform: scale(1.08);
+}
+
+.row__posterLarge {
+  max-height: 250px;
+}
+
+.row__posterLarge:hover {
+  transform: scale(1.09);
 }
